--- a/45-KahaniKornerGames/index.html
+++ b/45-KahaniKornerGames/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Grandstander:wght@400;700&family=Authentic+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
