--- a/game2.html
+++ b/game2.html
@@ -22,9 +22,9 @@
 
     <div class="container">
       <div class="title-container">
-        <h1 class="roman">Main Kya Hoon?</h1>
-        <h1 class="urdu">میں کیا ہوں؟</h1>
-        <h1 class="english">What Am I?</h1>
+        <h1 class="roman">Main Kaun Hoon?</h1>
+        <h1 class="urdu">میں کون ہوں؟</h1>
+        <h1 class="english">Who Am I?</h1>
       </div>
 
       <!-- settings container -->
